[gd_scene load_steps=25 format=3 uid="uid://buv885dhmnd04"]

[ext_resource type="Script" path="res://Scripts/Enemy/Enemy.gd" id="1_ecx0a"]
[ext_resource type="Texture2D" uid="uid://bg7arnchdahij" path="res://ART Assets/monster_16.png" id="2_qbc50"]
[ext_resource type="Texture2D" uid="uid://dona67h6fl3gk" path="res://ART Assets/shape.png" id="3_4lnoo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_77yvy"]
atlas = ExtResource("2_qbc50")
region = Rect2(0, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq53l"]
atlas = ExtResource("2_qbc50")
region = Rect2(52, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt3k5"]
atlas = ExtResource("2_qbc50")
region = Rect2(104, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8o66"]
atlas = ExtResource("2_qbc50")
region = Rect2(156, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpeyt"]
atlas = ExtResource("2_qbc50")
region = Rect2(208, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtjke"]
atlas = ExtResource("2_qbc50")
region = Rect2(260, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffo03"]
atlas = ExtResource("2_qbc50")
region = Rect2(312, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b6bb"]
atlas = ExtResource("2_qbc50")
region = Rect2(364, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0140u"]
atlas = ExtResource("2_qbc50")
region = Rect2(416, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pywpn"]
atlas = ExtResource("2_qbc50")
region = Rect2(468, 150, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ee5p"]
atlas = ExtResource("2_qbc50")
region = Rect2(0, 0, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh14o"]
atlas = ExtResource("2_qbc50")
region = Rect2(52, 0, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmxfp"]
atlas = ExtResource("2_qbc50")
region = Rect2(104, 0, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqbx8"]
atlas = ExtResource("2_qbc50")
region = Rect2(156, 0, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvd0t"]
atlas = ExtResource("2_qbc50")
region = Rect2(208, 0, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv0r6"]
atlas = ExtResource("2_qbc50")
region = Rect2(260, 0, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_61flc"]
atlas = ExtResource("2_qbc50")
region = Rect2(312, 0, 52, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdgnu"]
atlas = ExtResource("2_qbc50")
region = Rect2(364, 0, 52, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_6o1ih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77yvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq53l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt3k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8o66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpeyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtjke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffo03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b6bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0140u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pywpn")
}],
"loop": false,
"name": &"Die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ee5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh14o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmxfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqbx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvd0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv0r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61flc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdgnu")
}],
"loop": true,
"name": &"Fly",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8pncm"]
radius = 37.0
height = 74.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6ijuf"]
radius = 11.0
height = 44.0

[node name="Enemy_Type1" type="CharacterBody2D"]
position = Vector2(1149, -4)
collision_layer = 2
collision_mask = 48
script = ExtResource("1_ecx0a")
exp_Amout = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_6o1ih")
animation = &"Die"

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(2, 28.6667)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_4lnoo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 16)
scale = Vector2(1.07202, 0.960001)
shape = SubResource("CapsuleShape2D_8pncm")

[node name="BulletSpawner" type="Area2D" parent="."]
position = Vector2(-41, 16)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletSpawner"]
shape = SubResource("CapsuleShape2D_6ijuf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="BulletSpawner" to="." method="_on_bullet_spawner_body_entered"]
