[gd_scene load_steps=17 format=3 uid="uid://c4gln86iwnr31"]

[ext_resource type="Script" path="res://Scripts/Enemy/Enemy.gd" id="1_i2tgp"]
[ext_resource type="PackedScene" uid="uid://2ta75336t660" path="res://TSCN/Player/wander.tscn" id="2_itd6y"]
[ext_resource type="Texture2D" uid="uid://bkul3h77gm6i" path="res://ART Assets/03/dead/m3_Dead_Air.png" id="4_j2wob"]
[ext_resource type="Texture2D" uid="uid://c02jftw2q2vam" path="res://ART Assets/03/fly/m3_Fly.png" id="4_jabyu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hrins"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7bp7n"]
atlas = ExtResource("4_j2wob")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1gv1"]
atlas = ExtResource("4_j2wob")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pfvt"]
atlas = ExtResource("4_j2wob")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0xy1"]
atlas = ExtResource("4_j2wob")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4xcn"]
atlas = ExtResource("4_jabyu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y7fp"]
atlas = ExtResource("4_jabyu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ci6g"]
atlas = ExtResource("4_jabyu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vpiy"]
atlas = ExtResource("4_jabyu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_of825"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bp7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1gv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pfvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0xy1")
}],
"loop": false,
"name": &"Die",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4xcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y7fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ci6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vpiy")
}],
"loop": true,
"name": &"Fly",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q8vd1"]
radius = 10.8108

[sub_resource type="CircleShape2D" id="CircleShape2D_57ixd"]

[node name="enemy_type_4" type="CharacterBody2D" node_paths=PackedStringArray("wander_direction")]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_i2tgp")
ShootDuration = 0.4
wander_direction = NodePath("Wander")
group_name = "Route2"
Enemy_type = 3
exp_Amout = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hrins")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.66, 0.66)
sprite_frames = SubResource("SpriteFrames_of825")
animation = &"Die"

[node name="Wander" parent="." instance=ExtResource("2_itd6y")]
position = Vector2(15, 0)

[node name="BulletSpawners" type="Node2D" parent="."]

[node name="bullet_spawner_1" type="Area2D" parent="BulletSpawners"]
position = Vector2(-26, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletSpawners/bullet_spawner_1"]
position = Vector2(11, 0)
scale = Vector2(1.04645, 1.04496)
shape = SubResource("CircleShape2D_q8vd1")

[node name="bullet_spawner_2" type="Area2D" parent="BulletSpawners"]
position = Vector2(28, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletSpawners/bullet_spawner_2"]
position = Vector2(-13, 0)
scale = Vector2(1.14705, 1.1964)
shape = SubResource("CircleShape2D_57ixd")
